fixtures/frontend/milestone-2/valid/pipe-fanout-carriers/main.aivi
type User = {
    active: Bool,
    email: Text
}

type List Text -> Text
func joinEmails = items=>    "joined"

value users : List User = [
    {
        active: True,
        email: "ada@example.com"
    }
]

value emails : List Text = users
 *|> .email

value joinedEmails : Text = users
 *|> .email
 <|* joinEmails

signal liveUsers : Signal (List User) = [
    {
        active: True,
        email: "ada@example.com"
    }
]

signal liveEmails : Signal (List Text) = liveUsers
 *|> .email

signal liveJoinedEmails : Signal Text = liveUsers
 *|> .email
 <|* joinEmails
